Fix layout bug

--- a/examples/rivets/src/main.scss
+++ b/examples/rivets/src/main.scss
@@ -41,7 +41,7 @@ body {
   }
 }
 
-#contact-view {
+.contact-view {
   background-color: #fff;
   text-align: center;
   border: 1px solid #ddd;
